[tool.poetry]
name = "lightning"
version = "0.1.0"
description = "⚡ Reactive Python notebooks for lightning-fast iteration ⚡"
authors = ["malyvsen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
